--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body class="">
     <div class="container">
 
+      <div class="mt-3" id="juana">
+        <button class='juan btn btn-success' onclick='cambio(value)' value="Monster">Monster</button>
+        <button class='juan btn btn-success' onclick='cambio(value)' value="Spell">Spell</button>
+        <button class='juan btn btn-success' onclick='cambio(value)' value="Trap">Trap</button>
+      </div>
+
         <select class='m-4 w-25' id="selecterType">
             <option value='Ninguno' selected>Elegi un tipo de carta</option>
             <option value='Spell Card'>Spell Card</option>
@@ -26,11 +32,10 @@
             <option value="Synchro Monster">Synchro Monster</option>
             <option value="Tuner Monster">Tuner Monster</option>
             <option value="Ritual Monster">Ritual Monster</option>
-            <option></option>
         </select>
 
         <br>
-        
+
         <select class='ms-4 w-25' id="selecterRace">
             <option value="Nada" selected>Elegi un tipo de raza</option>
             <option value="Aqua">Aqua</option>
@@ -55,7 +60,7 @@
             <option value="Zombie">Zombie</option>
             <option value=""></option>
         </select>
-        
+
         <button class='btn btn-secondary ms-3' id="boton">elegir</button>
         <hr>
 
